Fix bug where elements overlap each other when their column width is shrunk
Details of the fix:

- Change css in a manner that the td element overflow is set without adding a class to each individual td element. This primarily fixes the problem described above since for some reason adding adj-col in the TDs of the child tables does not work as expected. In addition, not adding a class on each element is more optimal.
- Change the status link to use the button element so that it will not overlap the button beside it when the column where they are in is shrunk

--- a/jwala-webapp/src/main/webapp/resources/css/react/generic-components/default/simple-datatable.css
+++ b/jwala-webapp/src/main/webapp/resources/css/react/generic-components/default/simple-datatable.css
@@ -35,3 +35,7 @@ table.simple-data-table td > div > a {
 table.simple-data-table td > div > a:hover {
     color:#4585C5;
 }
+
+table.simple-data-table td {
+    border-left: none !important;
+}
